export class AbsenceTable {
    constructor(containerId) {
        this.container = document.getElementById(containerId);
    }

    render(absences) {
        // Même logique que CoursTable mais adaptée aux absences
    }
} 