export class EtudiantTable {
    constructor(containerId) {
        this.container = document.getElementById(containerId);
    }

    render(etudiants) {
        // Même logique que CoursTable mais adaptée aux étudiants
    }
} 