export class ProfesseurTable {
    constructor(containerId) {
        this.container = document.getElementById(containerId);
    }

    render(professeurs) {
        // Même logique que CoursTable mais adaptée aux professeurs
    }
} 