export class SeanceTable {
    constructor(containerId) {
        this.container = document.getElementById(containerId);
    }

    render(seances) {
        // Même logique que CoursTable mais adaptée aux séances
    }
} 